# dad_joke_generator

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
docs/: COST_REPORT.md  PLAN.md  TEST_PLAN.md
docs/architecture/: component.puml  deployment.puml  sequence.puml
infra/terraform/: .gitignore  README.md  acm.tf  api_gateway.tf  cloudfront.tf  cloudfront_function.tf  cloudwatch_alarms.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  outputs_cdn.tf  outputs_cloudwatch.tf  outputs_lambda.tf  outputs_s3.tf  outputs_ssm.tf  provider.tf  route53.tf  s3.tf  ses.tf  ssm.tf  variables.tf  variables_cdn.tf  variables_cloudwatch.tf  variables_lambda.tf  variables_s3.tf  variables_ssm.tf  versions.tf
infra/terraform-bootstrap/: .gitignore  README.md  budgets.tf  github_oidc.tf  outputs.tf  provider.tf  state.tf  variables.tf  versions.tf
scripts/: __init__.py  check_branch_name.py  check_cost_report.py  check_doc_freshness.py  check_manual_setup.py  check_phases.py  check_plan_xref.py  plan_parser.py  production_gate.py  render_plantuml.sh
src/joke_api/: __init__.py  client_ip.py  config.py  denylist.txt  denylist_matcher.py  fallback_jokes.py  handler.py  input_moderator.py  ip_hashing.py  joke_generator.py  joke_store.py  observability.py  output_moderator.py  rate_limiter.py  request_validator.py  response_builder.py  training_corpus.py  voice_synthesizer.py
tests/integration/: test_https_redirect.py
tests/property/: test_alerting_property.py  (+14 more)
web/: build_a11y.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
(+29 files in other folders)
